<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_play_str">Play!</string>
    <string name="btn_tut_str">Tutorial!</string>
    <string name="btn_settings_str">Settings!</string>
    
    <string name="btn_savePopup">Save</string>
    <string name="btn_closePopup">Close</string>
    <string name="tutorial_text">In this tutorial you will learn about blah balh balh</string>

    <string name="shutdown_intent_action">com.piesinthesky.game.intent.action.SHUTDOWN</string>
    
    <string name="btn_one">Jump</string>
    <string name="btn_two">Action</string>
</resources>