<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game" >

    <RelativeLayout 
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
    	android:layout_height="match_parent">
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:id="@+id/title"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:text="@string/app_name"
	        android:textSize="30sp"/>
        <Button 
            style="@style/menuButton"
	        android:id="@+id/btn_play"
	        android:text="@string/btn_play_str"
	        android:layout_below="@id/title"/>
        <Button 
            style="@style/menuButton"
	        android:id="@+id/btn_tut"
	        android:text="@string/btn_tut_str"
	        android:layout_below="@id/btn_play"/>
        <Button 
            style="@style/menuButton"
	        android:id="@+id/btn_settings"
	        android:text="@string/btn_settings_str"
	        android:layout_below="@id/btn_tut"/>
        <Button 
            style="@style/menuButton"
	        android:id="@+id/btn_exit"
	        android:text="@string/btn_exit_str"
	        android:layout_below="@id/btn_settings"/>
    </RelativeLayout>
	<RelativeLayout
        android:id="@+id/greyOverlay"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:background="#CC000000"
    	android:visibility="gone"
    	android:padding="20dp">
		<TextView
		    android:id="@+id/popupMainView"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="#FFFFFF"
		    android:text="@string/tutorial_text"/>
		<LinearLayout
		    android:id="@+id/popupBtns"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:gravity="bottom">
		    <Button
		    	android:id="@+id/btn_savePopup"
		    	android:layout_weight="1"
		    	style="@style/menuButton"
		    	android:text="@string/btn_savePopup"
		    	android:visibility="gone"/>
			<Button
			    android:id="@+id/btn_closePopup"
			    android:layout_weight="1"
			    style="@style/menuButton"
			    android:text="@string/btn_closePopup"/>
		</LinearLayout>
    </RelativeLayout>

</FrameLayout>